overflow fixed

--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -36,6 +36,9 @@
   height: 8vh;
   display: flex;
   padding-left: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   /* justify-content: center; */
   /* width: 38vw; */
 }
@@ -49,6 +52,8 @@
   font-weight: 600;
   padding-left: 10px;
   width: 37vw;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .project-links {
@@ -57,6 +62,7 @@
   display: flex;
   justify-content: space-between;
   width: 20vw;
+  min-width: 350px;
   padding-left: 10px;
 }
 
@@ -81,6 +87,8 @@
   font-size: 25px;
   width: 37vw;
   padding-left: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 
@@ -90,7 +98,7 @@
   justify-content: space-between;
   width: 20vw;
   padding-left: 10px;
-  /* width: 38vw; */
+  min-width: 350px;
 }
 .next-button {
   font-size: 20px;
